--- a/Esami/Esame_2023_09_07/Esercizio2.css
+++ b/Esami/Esame_2023_09_07/Esercizio2.css
@@ -1,20 +1,20 @@
-body, html {
+body {
 	width: 100vw;
-	height: 100vh;
-	padding: 0;
 	margin: 0;
+	padding: 0;
 	font-family: sans-serif;
 }
 
 body>div {
 	display: grid;
-	grid-template-columns: 20% 80%;
-	grid-template-rows: 1fr;
-	gap: 0 !important;
+	grid-template-columns: 25% 75%;
+	width: 100%;
 }
 
 body>div>div:nth-of-type(1) {
 	position: relative;
+	display: flex; 
+	flex-direction: column;
 	width: 100%;
 	height: 100vh;
 	color: white;
@@ -23,179 +23,167 @@ body>div>div:nth-of-type(1) {
 
 body>div>div:nth-of-type(1)>div:nth-of-type(1) {
 	display: flex;
+	justify-content: center;
 	align-items: center;
-	width: 90%;
-	padding: 1rem;
-	margin-top: 0.25rem;
-	gap: 0.25rem;
-}
-
-body>div>div:nth-of-type(1)>div:nth-of-type(1)>span {
-	padding: 1rem;
-	border: 2px solid grey;
-	border-radius: 5px;
+	width: 95%;
+	gap: 0.5rem;
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(1) {
-	width: 90%;
-	font-size: 16pt;
+	width: 85%;
+	padding: 0.9rem;
+	padding-left: 1rem;
+	font-size: 13pt;
+	border-radius: 5px;
+	border: 2px solid lightgrey;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(2) {
-	width: 10%;
+	width: 15%;
+	padding: 0.5rem;
+	border-radius: 5px;
+	border: 2px solid lightgrey;
+	text-align: center;
 }
 
-body>div>div:nth-of-type(1)>div:nth-of-type(1)>span>img {
-	width: 90%;
-	filter: invert(1);
+body>div>div:nth-of-type(1)>div:nth-of-type(1)>span:nth-of-type(2)>img {
+	width: 50%;
+	filter: invert(100%);
+}
+
+body>div>div:nth-of-type(1)>span:nth-of-type(1) {
+	color: grey;
+} 
+
+body>div>div:nth-of-type(1)>span {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	margin-top: 0.5rem; 
+} 
+
+body>div>div:nth-of-type(1)>span>img {
+	width: 7.5%;
+	filter: invert(100%);
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(2) {
+	position: absolute;
 	display: flex;
 	flex-direction: column;
-	width: 100%;
-	margin: 1rem 0rem 0rem 1rem;
-	gap: 1rem;
+	bottom: 0px;
+	border-top: 1px solid lightgrey;
+	padding: 0.5rem;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(2)>span {
 	display: flex;
 	align-items: center;
-	width: 100%;
-	margin-top: 0.25rem;
-	gap: 0.5rem;
+	gap: 1rem;
+}
+
+body>div>div:nth-of-type(1)>div:nth-of-type(2)>span:nth-of-type(2) {
+	padding-left: 1rem;
+	margin-top: 1.5rem;
 }
 
 body>div>div:nth-of-type(1)>div:nth-of-type(2)>span>img {
-	width: 10%;
-	filter: invert(1);
-}
-
-body>div>div:nth-of-type(1)>div:nth-of-type(3) {
-	position: absolute;
-	display: flex;
-	flex-direction: column;
-	width: 80%;
-	bottom: 0px;
-	margin: 1rem 0rem 0rem 1rem;
-	padding: 1rem;
-	gap: 1rem;
-	border-top: 1px solid grey;
-}
-
-body>div>div:nth-of-type(1)>div:nth-of-type(3)>span {
-	display: flex;
-	align-items: center;
-	width: 100%;
-	margin-top: 0.25rem;
-	gap: 0.5rem;
-}
-
-body>div>div:nth-of-type(1)>div:nth-of-type(3)>span:nth-of-type(2) {
-	padding-left: 1rem;
-}
-
-body>div>div:nth-of-type(1)>div:nth-of-type(3)>span>img {
-	width: 10%;
-	filter: invert(1);
+	width: 7.5%;
+	filter: invert(100%);
 }
 
 body>div>div:nth-of-type(2) {
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	width: 100%;
-	height: 100vh;
 }
 
-body>div>div:nth-of-type(2)>p {
-	display: flex;
+body>div>div:nth-of-type(2)>span:nth-of-type(1) {
+	position: relative;
 	align-items: center;
-	justify-content: center;
-	max-width: 100%;
-	padding: 2rem;
-	gap: 3rem;
-	margin: 0
-}
-
-
-
-body>div>div:nth-of-type(2)>p:nth-of-type(1) {
-	gap: 0 !important;
-	border-bottom: 1px solid grey;
-}	
-
-body>div>div:nth-of-type(2)>p:nth-of-type(1)>span {
 	text-align: center;
 	width: 100%;
-}	
-
-body>div>div:nth-of-type(2)>p:nth-of-type(1)>img {
-	width: 2.5%;
-	float: right;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	border-bottom: 1px solid lightgrey;
 }
 
-body>div>div:nth-of-type(2)>p>span {
+body>div>div:nth-of-type(2)>span:nth-of-type(1)>img {
+	position: absolute;
+	width: 2.5%;
+	right: 10px;
+	bottom: 25px;
+}
+
+body>div>div:nth-of-type(2)>span:nth-of-type(2), body>div>div:nth-of-type(2)>span:nth-of-type(3) {
+	display: flex;
+	align-items: center;
+	padding-top: 2rem;
+	padding-bottom: 3rem;
 	width: 100%;
+	gap: 3rem;
 }
 
-body>div>div:nth-of-type(2)>p>img {
+body>div>div:nth-of-type(2)>span>img {
 	width: 2.5%;
-	float: left;
-	padding-left: 2rem;
+	margin-left: 5rem;
 }
 
-body>div>div:nth-of-type(2)>p:nth-of-type(3) {
+body>div>div:nth-of-type(2)>span:nth-of-type(3) {
 	background-color: lightgrey;
-	opacity: 0.7;
 }
 
 body>div>div:nth-of-type(2)>div {
-	position: fixed;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 80%;
+	position: absolute;
+	width: 100%;
 	bottom: 0;
-	gap: 1rem;
 }
 
 body>div>div:nth-of-type(2)>div>div {
-	width: 82.5%;
-}
-
-body>div>div:nth-of-type(2)>div>div>span {
 	display: flex;
-	float: right;
-	align-items: center;
-	width: 10%;
-	padding: 1rem;
+	flex-direction: column;
+	text-align: center;
+	width: 75%;
+	bottom: 0;
+	margin: auto;
 	gap: 1rem;
-	background-color: white;
-	border-radius: 5px;
-	box-shadow: 0px 2.5px 5px 2.5px rgb(0, 0, 0, 0.2);
 }
 
-body>div>div:nth-of-type(2)>div>div>span>img {
+body>div>div:nth-of-type(2)>div>div>span:nth-of-type(1) {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 10%;
+	padding: 0.5rem 0.1rem 0.5rem 0.1rem;
+	padding-left: 0.25rem;
+	padding-right: 0.25rem;
+	border-radius: 5px;
+	border: 1px solid lightgrey;
+	background-color: white;
+}
+
+body>div>div:nth-of-type(2)>div>div>span:nth-of-type(1)>img {
 	width: 15%;
 }
 
-body>div>div:nth-of-type(2)>div>input {
-	width: 80%;
-	padding: 1.5rem;
-	margin: auto;
-	font-size: 14pt;
-	border: none !important;
+body>div>div:nth-of-type(2)>div>div>span:nth-of-type(2) {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 1rem;
+	color: grey;
 	border-radius: 5px;
-	box-shadow: 0px 2.5px 5px 2.5px rgb(0, 0, 0, 0.2);
+	border: 1px solid lightgrey;
+	background-color: white;
 }
 
-body>div>div:nth-of-type(2)>div>p {
-	text-align: center;
-	width: 100%;
+body>div>div:nth-of-type(2)>div>div>span:nth-of-type(2)>img {
+	width: 2.5%;
+	filter: invert(50%);
 }
 
-
-
-
-
+body>div>div:nth-of-type(2)>div>div>p {
+	text-decoration: underline;
+}
