--- a/Esami/Esame_2021_07_05/Esercizio2.css
+++ b/Esami/Esame_2021_07_05/Esercizio2.css
@@ -1,185 +1,148 @@
-body, html {
+body {
 	width: 100vw;
-	height: 100vh;
 	padding: 0;
 	margin: 0;
 	font-family: sans-serif;
+	overflow-x: hidden;
 }
 
-body>div {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	padding: 0;
-}
-
-body>div>nav {
+body>nav {
 	display: flex;
 	align-items: center;
-	max-width: 100%;
-	padding: 1rem;
-	border-bottom: 1px solid lightgrey;
+	width: 100%;
+	padding: 0.5rem;
+	border-bottom: 2px solid lightgrey;
 }
 
-body>div>nav>img {
+body>nav>img {
 	width: 5%;
 }
 
-body>div>nav>div:nth-of-type(1) {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 85%;
-	gap: 2rem;
+body>nav>div {
+	text-align: center;
+	width: 75%;
 	color: grey;
-}
-
-body>div>nav>div:nth-of-type(2) {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 15%;
-	gap: 2rem;
-}
-
-body>div>nav>div:nth-of-type(2)>span:nth-of-type(1) {
-	border-bottom: 3px solid blue;
-}
-
-body>div>nav>div>span {
-	font-size: 12pt;	
 	font-weight: bold;
 }
 
-body>div>div {
-	display: flex;
-	flex-direction: row;
+body>nav>div>span {
+	margin-right: 1.5rem;
+}
+
+body>nav>div:nth-of-type(2) {
+	width: 20%;
+	color: black;
+}
+
+body>nav>div:nth-of-type(2)>span:hover {
+	border-bottom: 3px solid lightblue;
+}
+
+body>div {
+	display: grid;
+	grid-template-columns: 50% 35% 15%;
 	width: 80%;
 	margin: auto;
-	gap: 2rem;
 }
 
-body>div>div>div:nth-of-type(1) {
-	width: 40%;	
-}
-
-body>div>div>div:nth-of-type(1)>div {
+body>div>div:nth-of-type(1) {
 	position: relative;
 	width: 100%;
-	height: 300px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-color: lightgrey;
 }
 
-body>div>div>div:nth-of-type(1)>div>p {
+body>div>div:nth-of-type(1)>span>img {
+	width: 75%;
+}
+
+body>div>div:nth-of-type(1)>span>div {
 	position: absolute;
-	width: 85%;
-	margin: 0;
-	bottom: 0;
-	color: white;
-	background-color: white;
-}
-
-body>div>div>div:nth-of-type(1)>p {
 	display: flex;
 	flex-direction: column;
-	width: 80%;
-	margin: 0;
-	padding: 2rem 2rem 2rem 0rem;
-	gap: 2rem;
+	width: 67.5%;
+	top: 17.5rem;
+	padding: 1rem 0rem 1rem;
+	gap: 1.5rem;
 	background-color: white;
-}
+} 
 
-body>div>div>div:nth-of-type(1)>p>span:nth-of-type(1) {
-	font-size: 20pt;
-	font-weight: bold;
-}
-
-body>div>div>div:nth-of-type(1)>p>span:nth-of-type(2) {
-	font-size: 12pt;
-}
-
-body>div>div>div:nth-of-type(2) {
-	display: flex;
-	flex-direction: column;
-	width: 30%;
-}
-
-body>div>div>div:nth-of-type(2)>div {
-	width:100%;
-}
-
-body>div>div>div:nth-of-type(2)>div>div {
-	position: relative;
-	width: 100%;
-	height: 200px;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-color: lightgrey;
-}
-
-body>div>div>div:nth-of-type(2)>div>div>p {
-	position: absolute;
-	width: 85%;
-	margin: 0;
-	bottom: 0;
-	color: white;
-	background-color: white;
-}
-
-body>div>div>div:nth-of-type(2)>div>p {
-	display: flex;
-	flex-direction: column;
-	width: 85%;
-	margin: 0;
-	padding: 1rem 2rem 1rem 0rem;
-	gap: 2rem;
-	background-color: white;
-}
-
-body>div>div>div:nth-of-type(2)>div>p>span:nth-of-type(1) {
+body>div>div:nth-of-type(1)>span>div>span:nth-of-type(1) {
 	font-size: 16pt;
 	font-weight: bold;
 }
 
-body>div>div>div:nth-of-type(2)>div>p>span:nth-of-type(2) {
+body>div>div:nth-of-type(2) {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+}
+
+body>div>div:nth-of-type(2)>span {
+	position: relative;
+	width: 100%;
+	margin-bottom: 5rem;
+}
+
+body>div>div:nth-of-type(2)>span>img {
+	width: 75%;
+}
+
+body>div>div:nth-of-type(2)>span>div {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	width: 65%;
+	top: 11.5rem;
+	padding: 1rem 0rem 1rem;
+	gap: 1.5rem;
+	background-color: white;
+} 
+
+body>div>div:nth-of-type(2)>span>div>span:nth-of-type(1) {
+	font-size: 14pt;
+	font-weight: bold;
+}
+
+body>div>div:nth-of-type(2)>span>div>span:nth-of-type(2) {
 	font-size: 9pt;
 }
 
-body>div>div>p:nth-of-type(1) {
-	display: flex;
-	flex-direction: column;
-	width: 30%;
-	margin: 3rem;
+body>div>div:nth-of-type(2)>span>span {
+	position: absolute;
+	text-align: center;
+	width: 35%;
+	top: 8.60rem;
+	left: 0;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	font-size: 9pt;
+	font-weight: bold;
+	color: white;
+	background-color: lightblue;
 }
 
-body>div>div>p>span:nth-of-type(1) {
-	width: 100%;
-	color: blue;
-	text-transform: uppercase;
+body>div>div:nth-of-type(3) {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+body>div>div:nth-of-type(3)>p>span:nth-of-type(1) {
+	font-weight: bold;
+	color: lightblue;
+}
+
+body>div>div:nth-of-type(3)>p>span {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+	margin-bottom: 2rem;
+}
+
+body>div>div:nth-of-type(3)>p>span>span {
+	font-size: 14pt;
 	font-weight: bold;
 }
 
-body>div>div>p>span {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-}
-
-body>div>div>p>span>span:nth-of-type(1) {
-	font-size: 13pt;
-	font-weight: bold;
-}
-
-body>div>div>p>span>span:nth-of-type(2) {
-	display: flex;
-	width: 100%;
-	margin-bottom: 1rem;
-	gap: 0.25rem;
+body>div>div:nth-of-type(3)>p>span>label {
 	color: grey;
-}
-
-body>div>div>p>span>span:nth-of-type(2)>span:nth-of-type(1) {
-	font-weight: bold;
 }
