--- a/Esami/Esame_2021_06_23/Esercizio2.css
+++ b/Esami/Esame_2021_06_23/Esercizio2.css
@@ -1,138 +1,138 @@
-body, html {
+body {
 	width: 100vw;
-	height: 100vh;
 	padding: 0;
 	margin: 0;
-	overflow-x: hidden;
 	font-family: sans-serif;
 }
 
-body>div {
-	position: relative;
+body>nav {
 	display: flex;
 	flex-direction: column;
-	max-width: 100%;
-	height: 100%;
+	margin-top: 0.5rem;
+}
+
+body>nav>div:nth-of-type(1) {
+	width: 100%;
+	padding-bottom: 0.5rem;
+	border-bottom: 1px solid lightgrey;
+}
+
+body>nav>div:nth-of-type(1)>span {
+	float: right;
+	margin-right: 1rem;
+}
+
+body>nav>div:nth-of-type(2) {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 90%;
+	margin: auto;
+}
+
+body>nav>div:nth-of-type(2)>img {
+	width: 7.5%;
+}
+
+body>nav>div:nth-of-type(2)>span:nth-of-type(1) {
+	width: 50%;
+	padding: 0.5rem;
+	border-radius: 5px;
+	border: 2px solid green;
+}
+
+body>nav>div:nth-of-type(3) {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	padding: 0.5rem;
+	gap: 5rem;
+	font-weight: bold;
+	color: white;
+	background-color: green;
+}
+
+body>div {
+	display: flex;
+	width: 90%;
+	gap: 1rem;
+	margin: auto;
+	margin-top: 2rem;
 }
 
 body>div>div:nth-of-type(1) {
 	display: flex;
-	flex-direction: row;
-	align-items: center;
-	max-width: 100%;
-	padding: 0.5rem;
-	gap: 0.25rem;
-	border-bottom: 1px solid lightgrey;
+	flex-direction: column;
+	width: 15%;
+	gap: 1rem;
 }
 
 body>div>div:nth-of-type(1)>span {
-	color: grey;
-}
-
-body>div>nav {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	padding: 1rem;
-	gap: 2rem;
-}
-
-body>div>nav>img {
-	width: 7.5%;
-}
-
-body>div>nav>div {
-	display: flex;
-	width: 50%;
-}
-
-body>div>nav>div>input {
-	width: 90%;
 	padding: 0.5rem;
-	font-size: 14pt;
-	border: 1px solid green;
-	border-radius: 2.5px;
+	background-color: #00800047;
 }
 
-body>div>nav>div>span {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 5%;
-	color: white;
-	font-size: 14pt;
-	font-weight: bold;
-	border-radius: 2.5px;
+body>div>div:nth-of-type(1)>span:hover {
+	text-decoration: underline;
 	background-color: green;
 }
 
 body>div>div:nth-of-type(2) {
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	padding: 0.5rem;
-	gap: 1rem;
-	color: white;
-	background-color: green;
-}
-
-body>div>div:nth-of-type(3) {
-	display: flex;
-	max-width: 100%;
-	height: 100%;
-	padding: 1rem;
-}
-
-body>div>div:nth-of-type(3)>div:nth-of-type(1) {
-	display: flex;
-	flex-direction: column;
-	width: 20%;
-	gap: 1rem;
-}
-
-body>div>div:nth-of-type(3)>div:nth-of-type(1)>p {
-	font-weight: bold;
-}
-
-body>div>div:nth-of-type(3)>div:nth-of-type(1)>span {
-	max-width: 100%;
-	padding: 0.5rem;
-	background-color: lightgreen;
-}
-
-body>div>div:nth-of-type(3)>div:nth-of-type(2) {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 1fr 1fr;	
-	width: 100%;;
-	padding: 1rem;
-	gap: 0.5rem;
+	grid-template-rows: 1fr 1fr;
+	width: 85%;
+	height: 65vh;
+	gap: 1rem;
 }
 
-body>div>div:nth-of-type(3)>div:nth-of-type(2)>div:nth-of-type(1) {
+body>div>div:nth-of-type(2)>span:nth-of-type(1) {
+	position: relative;
 	grid-column: 1 / span 2;
-	grid-row: 1 / span 2;
+	grid-row: 1 / span 3;
+	background-image: url("img/img1.png");
+	background-size: cover;
 }
 
-body>div>div:nth-of-type(3)>div:nth-of-type(2)>div {
+body>div>div:nth-of-type(2)>span:nth-of-type(2) {
+	position: relative;
+	grid-column: 1fr;
+	grid-row: 1 / span 1;
+	background-image: url("img/img2.png");
+	background-size: cover;
+}
+
+body>div>div:nth-of-type(2)>span:nth-of-type(3) {
+	position: relative;
+	grid-column: 1fr;
+	grid-row: 1 / span 1;
+	background-image: url("img/img3.png");
+	background-size: cover;
+}
+
+body>div>div:nth-of-type(2)>span:nth-of-type(4) {
+	position: relative;
+	grid-column: 1fr;
+	grid-row: 2 / span 2;
+	background-image: url("img/img4.png");
+	background-size: cover;
+}
+
+body>div>div:nth-of-type(2)>span:nth-of-type(5) {
+	position: relative;
+	grid-column: 1fr;
+	grid-row: 2 / span 2;
+	background-image: url("img/img5.png");
+	background-size: cover;
+}
+
+body>div>div:nth-of-type(2)>span>p {
+	position: absolute;
 	width: 100%;
-	height: 100%;
-	background-size: cover;	
-}
-
-body>div>div:nth-of-type(3)>div:nth-of-type(2)>div:nth-of-type(1)>p {
-	max-width: 100%;
-	font-size: 27pt;
-	font-weight: bold;
-	background-color: rgb(255, 255, 255, 0.5);
-}
-
-body>div>div:nth-of-type(3)>div:nth-of-type(2)>div>p {
+	top: 0;
+	padding: 2rem;
 	margin: 0;
-	max-width: 100%;
-	font-size: 18pt;
-	padding: 1rem;
 	font-weight: bold;
-	background-color: rgb(255, 255, 255, 0.5);
+	font-size: 14pt;
+	background-color: rgb(255,255,255,0.5);
 }
