--- a/Esami/Esame_2024_06_18/Esercizio2.css
+++ b/Esami/Esame_2024_06_18/Esercizio2.css
@@ -1,90 +1,92 @@
 body {
 	width: 100vw;
 	padding: 0;
-	margin: 0;
+	margin: 0; 
 	font-family: sans-serif;
 }
 
 body>div {
 	display: flex;
 	flex-direction: column;
-	text-align: center;
-	width: 600px;
-	padding: 3rem;
+	width: 45%;
+	padding: 2rem;
 	margin: auto;
-	margin-top: 1rem;
+	margin-top: 2rem;
+	gap: 1rem;
 	border: 2px solid lightgrey;
+	box-shadow: 0px 2.5px 15px 15px rgb(0,0,0,0.2);
 }
 
-body>div>p:nth-of-type(1), body>div>p:nth-of-type(2) {
-	width: 100%;
-	height: 62.5px;
+body>div>span:nth-of-type(1), body>div>span:nth-of-type(2) {
+	max-width: 100%;
+	padding: 2rem;
 	background-color: lightblue;
 }
 
-body>div>div:nth-of-type(1) {
+body>div>div:nth-of-type(1), body>div>div:nth-of-type(2) {	
 	display: flex;
 	width: 100%;
-	gap: 2rem;
+	height: 175px;
+	gap: 1rem;
 }
 
-body>div>div:nth-of-type(1)>p {
+body>div>div:nth-of-type(1)>span:nth-of-type(1) {	
 	width: 50%;
-	height: 125px;
-}
-
-body>div>div:nth-of-type(1)>p:nth-of-type(1) {
 	background-color: red;
 }
 
-body>div>div:nth-of-type(1)>p:nth-of-type(2) {
-	background-color: blue;
-}
-
-body>div>div:nth-of-type(2) {
-	display: flex;
-	width: 100%;
-	gap: 2rem;
-}
-
-body>div>div:nth-of-type(2)>p {
-	width: 33%;
-	height: 125px;
-}
-
-body>div>div:nth-of-type(2)>p:nth-of-type(1), body>div>div:nth-of-type(2)>p:nth-of-type(3) {
-	background-color: red;
-}
-
-body>div>div:nth-of-type(2)>p:nth-of-type(2) {
+body>div>div:nth-of-type(1)>span:nth-of-type(2) {	
+	width: 50%;
 	background-color: orange;
 }
 
+body>div>div:nth-of-type(2)>span:nth-of-type(1) {	
+	width: 33%;
+	background-color: blue;
+}
 
-@media screen and (max-width: 500px) {
-	body>div {
-		width: 370px;
+body>div>div:nth-of-type(2)>span:nth-of-type(2) {	
+	width: 33%;
+	background-color: red;
+}
+
+body>div>div:nth-of-type(2)>span:nth-of-type(3) {	
+	width: 33%;
+	background-color: orange;
+}
+
+@media screen and (max-width: 600px) {
+	body>div>div:nth-of-type(1), body>div>div:nth-of-type(2) {	
+		flex-direction: column;
 	}
 	
-	body>div>div:nth-of-type(1) {
-		flex-direction: column;
+	body>div>div:nth-of-type(1)>span:nth-of-type(1) {	
 		width: 100%;
-		gap: 0;
+		height: 100%;
+		background-color: red;
 	}
 
-	body>div>div:nth-of-type(1)>p {
+	body>div>div:nth-of-type(1)>span:nth-of-type(2) {	
 		width: 100%;
-		height: 125px;
-	}
-	
-	body>div>div:nth-of-type(2) {
-		flex-direction: column;
-		width: 100%;
-		gap: 0;
+		height: 100%;
+		background-color: orange;
 	}
 
-	body>div>div:nth-of-type(2)>p {
+	body>div>div:nth-of-type(2)>span:nth-of-type(1) {	
 		width: 100%;
-		height: 125px;
+		height: 175px;
+		background-color: blue;
+	}
+
+	body>div>div:nth-of-type(2)>span:nth-of-type(2) {	
+		width: 100%;
+		height: 175px;
+		background-color: red;
+	}
+
+	body>div>div:nth-of-type(2)>span:nth-of-type(3) {	
+		width: 100%;
+		height: 175px;
+		background-color: orange;
 	}
 }
