--- a/Esercizi_Lecture/Esercizi_Lect6/Esercizio1.css
+++ b/Esercizi_Lecture/Esercizi_Lect6/Esercizio1.css
@@ -1,107 +1,127 @@
-body, html {
-    max-width: 100vw;
-    max-height: 100vh;
-    padding: 0;
-    margin: 0; 
-    font-family: 'Courier New', Cou rier, monospace;
-    background-color: lightyellow;
+body {
+	width: 100vw;
+	padding: 0;
+	margin: 0;
+	font-family: sans-serif;
+}
+
+h1 {
+	color: green;
 }
 
 body>div {
-    display: flex;
-    flex-direction: row;
-    width: 75%;
-    margin: auto;
-    padding: 1rem;
-    padding-bottom: 5rem;
-    gap: 1rem;
+	display: flex;
+	flex-direction: row;
+	width: 75%;
+	padding: 1rem;
+	margin: auto;
+	gap: 5rem;
+	background-color: lightblue;
 }
 
 body>div>div:nth-of-type(1) {
-    max-width: 60%;
-    margin: auto;
+	display: flex;
+	flex-direction: column;
+	width: 65%;
 }
 
-h2 {
-    color: green;
+body>div>div:nth-of-type(1)>p {
+	color: grey;
 }
 
-p, label {
-    color: grey;
+body>div>div:nth-of-type(1)>p>a {
+	color: fuchsia;
 }
 
-a {
-    width: auto;
-    color: fuchsia;
-}
-
-a:hover {
-    background-color: yellow;
-}
-
-table {
-    width: 100%;
+body>div>div:nth-of-type(1)>p>a:hover {
+	background-color: yellow;
 }
 
 table>thead>tr {
-    color: white;
-    background-color: rgb(0, 0, 0, 0.7);
+	background-color: black;
 }
 
-table>thead>tr>td {
-    padding: 0.5rem;
+table>thead>tr>th {
+	text-align: left;
+	padding: 0.5rem;
+	color: white;
 }
 
 table>tbody>tr>td {
-    padding: 0.25rem;
-    border-bottom: 1px solid black;
+	padding: 0.5rem;
+	border-bottom: 2px solid white;
 }
 
 body>div>div:nth-of-type(1)>div {
-    display: grid;
-    grid-template-columns: 20% 40%;
-    grid-template-rows: 1fr;
-    gap: 1rem;
+	display: grid;
+	grid-template-columns: 25% 50%;
+	justify-content: space-between;
+	width: 75%;
+	gap: 1rem;
 }
 
-button {
-    float: right;
-    padding: 0.5rem 2rem 0.5rem 2rem;
-    color: white;
-    border: none !important;
-    background-color: green;
+body>div>div:nth-of-type(1)>div>textarea {
+	height: 125px;
+}
+
+body>div>div:nth-of-type(1)>div>select {
+	border: none !important;
+	background-color: white;
+}
+
+body>div>div:nth-of-type(1)>div:nth-of-type(2) {
+	position: relative;
+	width: 100%;
+	padding: 1rem;
+	margin-top: 1rem;
+}
+
+body>div>div:nth-of-type(1)>div:nth-of-type(2)>button {
+	position: absolute;
+	width: 15%;
+	padding: 0.5rem;
+	right: 0;
+	bottom: 0;
+	border: none !important;
+	color: white;
+	background-color: green;
 }
 
 body>div>div:nth-of-type(2) {
-    width: 25%;
+	width: 25%;
 }
 
-body>div>div:nth-of-type(2)>div {
-    width: 100%;
+body>div>div:nth-of-type(2)>p {
+	display: flex;
+	flex-direction: column;
 }
 
-body>div>div:nth-of-type(2)>div>p {
-    display: flex;
-    flex-direction: column;
+body>div>div:nth-of-type(2)>p>span:nth-of-type(1) {
+	font-weight: bold;
+	color: green;
 }
 
-body>div>div:nth-of-type(2)>div>p>span:nth-of-type(1) {
-    margin-bottom: 0.25rem;
-    font-weight: bold;
-    color: green;
+body>div>div:nth-of-type(2)>p>span:nth-of-type(2) {
+	margin-bottom: 1rem;
+	font-weight: bold;
+	font-style: italic;
 }
 
-body>div>div:nth-of-type(2)>div>p>span:nth-of-type(2) {
-    margin-bottom: 1rem;
-    font-style: italic;
-    color: black;
+body>div>div:nth-of-type(2)>p>span:nth-of-type(3) {
+	color: grey;
 }
 
-body>div>div:nth-of-type(2)>div>p>span:nth-of-type(4) {
-    margin-top: 1rem;
+body>div>div:nth-of-type(2)>p>a {
+	width: fit-content;
+	color: fuchsia;
 }
 
-img {
-    width: 250px;
-    height: 250px;
+body>div>div:nth-of-type(2)>p>a:hover {
+	background-color: yellow;
+}
+
+body>div>div:nth-of-type(2)>p>img {
+	width: 75%;
+	height: 100px;
+	border: 2px solid lightgrey;
 }
