--- a/Esami/Esame_2024_05_28/turno_1/Esercizio1.css
+++ b/Esami/Esame_2024_05_28/turno_1/Esercizio1.css
@@ -1,93 +1,122 @@
 body {
 	width: 100vw;
-	margin: 0;
 	padding: 0;
+	margin: 0;
 	font-family: sans-serif;
-	overflow-x: hidden;
 }
 
 body>div {
-	max-width: 100%;
+	width: 100%;
+	height: 100%;
 }
 
-body>nav {
+body>div>nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 1rem;
-	overflow-x: hidden;
+	width: 100%;
+	padding: 1rem 0 1rem;
+	font-weight: bold;
+	color: white;
 	background-color: red;
 }
 
-body>nav>img {
+body>div>nav>img {
 	width: 10%;
+	padding-left: 2rem;
 }
 
-body>nav>div {
+body>div>nav>div {
 	display: flex;
-	gap: 1rem;
-}
-
-body>nav>div>span {
-	font-size: 14pt;
-	font-weight: bold;
-	color: white;
-	text-transform: uppercase;
+	padding-right: 2rem;
+	gap: 2rem;
 }
 
 body>div>div:nth-of-type(1) {
-	display: grid;
-	grid-template-columns: 50% 25% 25%;
-	gap: 0rem;
-	overflow-x: hidden;
+	display: flex;
+	width: 100%;
+	height: 35rem;
+	gap: 0;
+}
+
+body>div>div:nth-of-type(1)>span:nth-of-type(1) {
+	position: relative;
+	width: 65%;
+	background-image: url("img/1.png");
+	background-size: cover;
 }
 
 body>div>div:nth-of-type(1)>span {
-	display: flex;
 	position: relative;
-	justify-content: center;
-	width: 100%;
+	width: 25%;
+	background-image: url("img/2.png");
+	background-size: cover;
+}
+
+body>div>div:nth-of-type(1)>span:hover {
+	opacity: 0.5;
 }
 
 body>div>div:nth-of-type(1)>span>span {
 	position: absolute;
-	width: 80%;
+	width: 75%;
+	bottom: 3rem;
+	left: 50%;
+	transform: translateX(-50%);
 	padding: 2rem;
-	bottom: 2.5rem;
-	font-weight: bold;
 	color: white;
-	border-left: 2px solid red;
 	background-color: rgb(0,0,0,0.5);
+	border-left: 2px solid red;
+}
+
+body>div>span {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	margin-top: 2rem;
+}
+
+body>div>span>span:nth-of-type(1) {
+	padding-left: 0.25rem;
+	margin-left: 2rem;
+	font-weight: bold;
+	border-left: 3px solid red;
+}
+
+body>div>span>span:nth-of-type(2) {
+	padding-right: 2rem;
+	font-weight: bold;
+	color: blue;
 }
 
 body>div>div:nth-of-type(2) {
 	display: flex;
 	width: 100%;
-	margin-top: 3rem;
-	gap: 0.25rem;
+	padding-left: 1rem;
+	margin-top: 2rem;
+	gap: 1rem;
 	overflow-x: scroll;
-}
+} 
 
 body>div>div:nth-of-type(2)>span {
-	width: 250px;
-	padding: 0.25rem;
+	width: 50%;	
 }
 
 body>div>div:nth-of-type(2)>span>img {
-	width: 100%;
-	height: 250px;
-	border-radius: 10%;
-}
-
-body>div>div:nth-of-type(2)>span>span {
-	font-size: 9pt;	
+	border-radius: 5%;
 }
 
 body>div>div:nth-of-type(2)>span>img:hover {
-	filter: brightness(50%);
+	opacity: 0.5;
 }
 
-a {
-	text-decoration: none;
-	color: black;
+body>div>div:nth-of-type(2)>span>p {
+	display: flex;
+	flex-direction: column;
+	padding-left: 0.25rem;
+	gap: 1rem;
+}
+
+body>div>div:nth-of-type(2)>span>p>span:nth-of-type(1) {
+	font-weight: bold;
 }
