--- a/Esami/Esame_2023_06_26/Esercizio4.css
+++ b/Esami/Esame_2023_06_26/Esercizio4.css
@@ -1,38 +1,40 @@
-body, html {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+body {
+	width: 100vw;
+	padding: 0;
+	margin: 0;
+	font-family: sans-serif;
 }
 
 body>div {
-    display: flex;
-    flex-direction: column;
-    width: 25%;
-    margin: auto;
-    gap: 0.5rem;
+	width: 25%;
+	padding: 1rem;
+	margin: auto;
 }
 
-body>div>span {
-    width: 100%;
-    font-size: 13pt;
-    font-weight: bold;
-    border-bottom: 2px solid black;
+body>div>p:nth-of-type(1) {
+	width: 100%;
+	font-weight: bold;
+	padding-left: 0.25rem;
+	padding-bottom: 0.5rem;
+	margin: 0;
+	border-bottom: 2px solid black;
 }
 
 body>div>textarea {
-    width: 90%;
-    height: 125px;
-    padding: 1rem;
-    margin: auto;
-    font-size: 12pt;;
-    border-radius: 15px;
-    border: 2px solid black;
+	width: 100%;
+	height: 10rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	border-radius: 5px;
+	border: 2px solid black;
 }
 
 body>div>div {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
+}
+
+body>div>div>div {
+	display: flex;
+	gap: 1rem;
 }
